--- a/manual/index.htm
+++ b/manual/index.htm
@@ -5,6 +5,7 @@
 <meta http-equiv="Content-Style-Type" content="text/css">
 <meta http-equiv="Content-Script-Type" content="text/javascript">
 <link rel="stylesheet" type="text/css" href="style.css">
+<title>T2schola拡張機能 使用方法</title>
 </head>
 
 <body>
@@ -12,13 +13,11 @@
 <div class="header">
 <p id="date"></p>
 <a href="#" id="reflesh"></a>
-<!--
 <a href="#" id="help">？</a>
--->
 </div>
 <ul id="tasks">
 </ul>
-<ul><li class="button" id="show_marked"><span>提出済み</span><span>&gt;</span></li></ul>
+<ul><li class="button" id="show_submitted"><span>提出済み</span><span>&gt;</span></li></ul>
 </div>
 
 <script type="text/javascript" src="pop.js"></script>
