--- a/popup/index.htm
+++ b/popup/index.htm
@@ -24,7 +24,7 @@
 <ul id="tasks_submitted"></ul>
 
 <div id="footer">
-<iframe scrolling="no" id="iframe" src="https://komekui.xrea.jp/ext_embed/embed/?from=titechtask_3.0.2"></iframe>
+<iframe scrolling="no" id="iframe" src="https://komekui.xrea.jp/titechtask_iframe/embed/?ver=3.0.3"></iframe>
 </div>
 
 <script type="text/javascript" src="function.js"></script>
