--- a/popup/index.htm
+++ b/popup/index.htm
@@ -24,7 +24,7 @@
 <ul id="tasks_submitted"></ul>
 
 <div id="footer">
-<iframe scrolling="no" id="iframe" src="https://titechtask.bb.xrea.jp/embed/?ver=3.0.7"></iframe>
+<iframe scrolling="no" id="iframe" src="https://bb.xrea.jp/titech/embed/?ver=3.0.8"></iframe>
 </div>
 
 <script type="text/javascript" src="function.js"></script>
