API呼び出しを実装

--- a/popup/index.htm
+++ b/popup/index.htm
@@ -1,36 +1,21 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
+<!DOCTYPE html>
+<html lang="ja">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<meta http-equiv="Content-Style-Type" content="text/css">
-<meta http-equiv="Content-Script-Type" content="text/javascript">
+<meta charset="UTF-8">
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
-<div class="header">
-<a href="#" class="circle" id="reflesh"></a>
-<a href="#" class="circle" id="help">？</a>
-<a href="#" id="tasks_switch">提出済みの課題を表示</a>
-<p id="date"></p>
-</div>
+<button id="upload">upload</button>
+<div id="message"></div>
 
-<div id="calender">
-<table id="calender_table"></table>
-<div id="calender_courses" class="dragtarget"><div></div></div>
-</div>
-
-<ul id="tasks"></ul>
-<ul id="tasks_submitted"></ul>
-
-<div id="footer">
-<iframe scrolling="no" id="iframe" src="https://bb.xrea.jp/titech/embed/?ver=3.0.8"></iframe>
-</div>
-
+<!--
 <script type="text/javascript" src="function.js"></script>
-<script type="text/javascript" src="api.js"></script>
-<script type="text/javascript" src="script.js"></script>
 <script type="text/javascript" src="calender.js"></script>
+-->
+<script type="text/javascript" src="t2schola.js"></script>
+<script type="text/javascript" src="data.js"></script>
+<script type="text/javascript" src="script.js"></script>
 
 </body>
 </html>
