見た目を微調整

--- a/popup/index.htm
+++ b/popup/index.htm
@@ -9,7 +9,7 @@
 <div class="header">
 <a href="#" class="circle" id="reflesh"></a>
 <a href="#" id="tasks_switch">提出済みの課題を表示</a>
-<p id="lastupdate"></p>
+<p id="message"></p>
 </div>
 
 <div id="calender">
