教務webからデータを取得

--- a/popup/index.htm
+++ b/popup/index.htm
@@ -13,10 +13,7 @@
 </div>
 
 <div id="calender">
-<!--
 <table id="calender_table"></table>
-<div id="calender_courses" class="dragtarget"><div></div></div>
--->
 </div>
 
 <ul id="tasks"></ul>
@@ -27,9 +24,11 @@
 </div>
 
 <script type="text/javascript" src="t2schola.js"></script>
+<script type="text/javascript" src="kyomu.js"></script>
 <script type="text/javascript" src="tasks.js"></script>
-<script type="text/javascript" src="script.js"></script>
+<script type="text/javascript" src="calender.js"></script>
 <script type="text/javascript" src="draw.js"></script>
+<script type="text/javascript" src="script.js"></script>
 
 </body>
 </html>
