--- a/popup/index.htm
+++ b/popup/index.htm
@@ -30,8 +30,14 @@
 </div>
 
 <div class="footer">
-<iframe scrolling="no" id="iframe"></iframe>
+	<iframe scrolling="no" id="iframe"></iframe>
+	<p>
+		<a href="#" id="footer_about">この拡張機能について</a>
+		<a href="#" id="footer_contact">お問い合わせ</a>
+	</p>
 </div>
+
+<div id="loading"></div>
 
 <script type="text/javascript" src="lib/t2schola.js"></script>
 <script type="text/javascript" src="lib/kyomu.js"></script>
